# docmd

./: README.md  pyproject.toml
src/docmdumper/: cli.py
